<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9E22402A"
    tools:context=".Admin.AdminActivity">

    <ImageView
        android:id="@+id/F1Logo"
        android:layout_width="414dp"
        android:layout_height="108dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/f1_image" />

    <TextView
        android:id="@+id/welcomeAdmin"
        android:layout_width="125dp"
        android:layout_height="37dp"
        android:background="#D5CDCD"
        android:backgroundTint="#DCD6CD"
        android:gravity="center"
        android:text="@string/welcome_admin"
        android:textColor="#EC3F3F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/F1Logo"
        app:layout_constraintVertical_bias="0.117" />

    <Button
        android:id="@+id/editItems"
        android:layout_width="125dp"
        android:layout_height="61dp"
        android:backgroundTint="#DCD6CD"
        android:text="@string/edit_items"
        android:textColor="#EC3F3F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editTeams"
        android:layout_width="125dp"
        android:layout_height="61dp"
        android:backgroundTint="#DCD6CD"
        android:text="@string/edit_teams"
        android:textColor="#EC3F3F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753" />

    <Button
        android:id="@+id/editUsers"
        android:layout_width="125dp"
        android:layout_height="61dp"
        android:backgroundTint="#DCD6CD"
        android:text="@string/edit_users"
        android:textColor="#EC3F3F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637" />


</androidx.constraintlayout.widget.ConstraintLayout>