<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECDBDB"
    tools:context=".Screens.MainActivity">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="54dp"
        android:backgroundTint="#BA1414"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/createButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introMessage"
        app:layout_constraintVertical_bias="0.738" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="120dp"
        android:layout_height="54dp"
        android:backgroundTint="#BA1414"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719" />

    <ImageView
        android:id="@+id/F1Logo"
        android:layout_width="414dp"
        android:layout_height="108dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/f1_image" />

    <TextView
        android:id="@+id/introMessage"
        android:layout_width="240dp"
        android:layout_height="73dp"
        android:layout_marginBottom="456dp"
        android:background="#F6F6F6"
        android:gravity="center"
        android:text="@string/welcome_if_you_have_an_account_tap_on_login_else_tap_on_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/F1Logo"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="303dp" />

</androidx.constraintlayout.widget.ConstraintLayout>